CDS build failure with gcc11

XMLWordPrintable

    • b19

      * For target hotspot_variant-server_libjvm_objs_whitebox.o:
      In file included from /home/jdk/src/hotspot/share/prims/whitebox.cpp:27:
      /home/jdk/src/hotspot/share/cds/cdsConstants.hpp:32:3: error: 'size_t' does not name a type
         32 | size_t _value;
            | ^~~~~~
      /home/jdk/src/hotspot/share/cds/cdsConstants.hpp:29:1: note: 'size_t' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
         28 | #include "memory/allStatic.hpp"
        +++ |+#include <cstddef>
         29 |
      /home/jdk/src/hotspot/share/cds/cdsConstants.hpp:40:10: error: 'size_t' does not name a type
         40 | static size_t get_cds_constant(const char* name);
            | ^~~~~~
      /home/jdk/src/hotspot/share/cds/cdsConstants.hpp:40:10: note: 'size_t' is defined in header '<cstddef>'; did you forget to '#include <cstddef>'?
      /home/jdk/src/hotspot/share/cds/cdsConstants.hpp:41:10: error: 'size_t' does not name a type
         41 | static size_t get_cds_offset(const char* name);
            | ^~~~~~
         ... (rest of output omitted)

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: