8275004: CDS build failure with gcc11